# wagtail-sitemap-seo

./: .gitignore  README.md  pyproject.toml
src/wagtail_sitemap_seo/: admin_views.py  base.py  root_builder.py  s3_helper.py  storage.py  sub_map_builder.py
src/wagtail_sitemap_seo.egg-info/: PKG-INFO
src/wagtail_sitemap_seo/management/commands/: build_sitemaps.py
tests/: settings.py  test_admin_views.py  test_base.py  test_management_command.py  test_root_builder_helpers.py  test_sub_map_builder.py  test_views.py  test_xml_structure.py
